# rktk-nrf-dongle

./: Cargo.toml  memory.x  rktk.json  rust-toolchain.toml  start.resc
.cargo/: config.toml
src/: main.rs
