cargo-features = ["profile-rustflags"]

[package]
edition = "2021"
name = "rktk-nrf-dongle"
version = "0.1.0"
authors = ["nazo6 <git@nazo6.dev>"]
resolver = "2"

[[bin]]
name = "rktk-nrf-dongle"
test = false
bench = false

[dependencies]
rktk = { path = "../rktk/lib/rktk", features = ["defmt", "alloc"] }
rktk-drivers-nrf = { path = "../rktk/lib/rktk-drivers-nrf/", default-features = false, features = [
  "defmt",
] }
rktk-drivers-common = { path = "../rktk/lib/rktk-drivers-common/" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = [
  "task-arena-size-1024",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
  "nightly",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.3", features = [
  "defmt",
  "nrf52840",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-nrf-esb = { version = "0.1.0", path = "../../../lib/embassy-nrf-esb", features = [
  "fast-ru",
  "defmt",
] }
nrf-pac = { version = "0.1.0", features = ["defmt"] }
once_cell = { version = "1.19.0", default-features = false, features = [
  "atomic-polyfill",
] }
ssd1306 = { version = "0.9.0", features = ["async"] }
embedded-alloc = "0.6.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
